# MongoToPsql

./: README.md  pyproject.toml
MongoToPsql/: create_collection.py  mongo_to_postgres.py  postgresql_utils.py
requirements/: conda.yaml
