[tool.poetry]
name = "MongoToPsql"
version = "0.1.0"
description = ""
authors = ["Sandro Loch <es.loch@gmail.com>"]
readme = "README.md"
packages = [{include = "mongodb_to_psql"}]

[tool.poetry.dependencies]
python = "^3.11"
docker-compose = "^1.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
